syntax = "proto3";

package org_glowroot_collector_spi_model;

option java_package = "org.glowroot.collector.spi.model";

service DownstreamService {
  rpc connect (stream ClientResponse) returns (stream ServerRequest);
}

message ServerRequest {
  int64 request_id = 1;
  oneof message {
    MBeanTreeRequest mbean_tree_request = 16;
  }
}

message ClientResponse {
  int64 request_id = 1;
  oneof message {
    Hello hello = 2;
    MBeanTreeResponse mbean_tree_response = 16;
  }
}

message Hello {
  int64 server_id = 1;
}

message MBeanTreeRequest {
  repeated string include_attrs_for_object_name = 1;
}

message MBeanTreeResponse {
  repeated MBeanNode root_node = 1;
}

message MBeanNode {
  string object_name = 1;
  repeated MBeanAttribute attribute = 2;
  repeated MBeanNode child_node = 3;
}

message MBeanAttribute {
  string name = 1;
  MBeanValue value = 2;
}

message MBeanValue {
  oneof val {
    string sval = 1;
    double dval = 2;
    int64 lval = 3;
    bool bval = 4;
  }
}
